updating decider to get specific card using hand object